<resources>
    <string name="app_name"></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">UserName</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_role">Association Representative</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_Confpassword">Confirm Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_add_campaign">AddCampaignActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_campaign">Campaign</string>
    <string name="menu_organization">Organization</string>
    <string name="menu_event">Event</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="roles">
        <item>Association</item>
        <item>Contributor</item>

    </string-array>


</resources>