<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        android:src="@drawable/left"
        android:onClick="BackAction"
        />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foregroundGravity="center"
        android:text="Register"
        android:textStyle="bold"
        android:textColor="@color/colorGradientPrimaryDark1"
        android:textSize="@dimen/activity_large_size"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/txtdescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtLog"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foregroundGravity="center"
        android:text="Register by entering your \npersonnel information"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGradientPrimary2"
        android:textSize="@dimen/activity_medium_size"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtdescrip"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:background="@drawable/txt_login_background"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        android:textColor="@color/colorGradientPrimaryDark1"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_username"
        android:background="@drawable/txt_login_background"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        android:textColor="@color/colorGradientPrimaryDark1"
        />

    <!--   <EditText
           android:id="@+id/address"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           app:layout_constraintTop_toBottomOf="@+id/username"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginTop="40dp"
           android:layout_marginStart="24dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/prompt_username"
           android:background="@drawable/txt_login_background"
           android:textSize="@dimen/activity_medium_size"
           android:textStyle="bold"
           android:textColor="@color/colorGradientPrimaryDark1"
           />
           -->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/txt_login_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorGradientPrimaryDark1"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/txt_login_background"
        android:hint="@string/prompt_Confpassword"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorGradientPrimaryDark1"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_round_background"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confPassword"
        app:layout_constraintVertical_bias="0.497" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="327dp" />
</androidx.constraintlayout.widget.ConstraintLayout>