<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/txtLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foregroundGravity="center"
        android:text="Login"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorGradientPrimaryDark1"
        android:textSize="@dimen/activity_large_size"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/txtdescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtLog"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foregroundGravity="center"
        android:text="Enter your login details to \naccess your account"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGradientPrimary2"
        android:textSize="@dimen/activity_medium_size"
        android:textAlignment="center"
        android:gravity="center_horizontal"

        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txtdescrip"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:background="@drawable/txt_login_background"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        android:textColor="@color/colorGradientPrimaryDark1"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:background="@drawable/txt_login_background"
        android:textSize="@dimen/activity_medium_size"
        android:textStyle="bold"
        android:textColor="@color/colorGradientPrimaryDark1"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:onClick="loginaction"
        android:text="@string/action_sign_in"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/btn_round_background"
        />


    <TextView
        android:id="@+id/txtReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:foregroundGravity="center"
        android:text="I Don't have an Account ,Register"
        android:textStyle="normal"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorGradientPrimary2"
        android:textSize="@dimen/activity_small_size"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtForgetPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtReg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Forget Password ?"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGradientPrimaryDark1"
        android:textSize="@dimen/activity_small_size"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>